# FAI-Airscore

./: .gitignore  pyproject.toml
airscore/core/: frontendUtils.py
airscore/core/pilot/: pilot.py
airscore/public/: views.py
airscore/templates/users/: task_score_admin.html
airscore/user/: views.py
