[tool.poetry]
name = "airscore"
version = "0.1.0"
description = "GAP based Paragliding and Hang Gliding scoring from IGC files"
authors = ["Antonio Golfari <antoniogolfari@gmail.com>", "Stuart Mackintosh <stuart.mackintosh@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
Flask = ">=1.1.2"
Werkzeug = ">=1.0.1"
click = ">=7.0"
Flask-SQLAlchemy = ">=2.4.1"
SQLAlchemy = ">=1.3.16"
psycopg2-binary = ">=2.8.5"
Flask-Migrate = ">=2.5.3"
Flask-WTF = ">=0.14.3"
WTForms = ">=2.2.1"
gevent = ">=1.5.0"
gunicorn = ">=19.9.0"
supervisor = ">=4.1.0"
Flask-Static-Digest = ">=0.1.3"
Flask-Login = ">=0.5.0"
Flask-Bcrypt = ">=0.7.1"
Flask-Caching = ">=1.7.2"
flask-socketio = ">=4.2.1"
Flask-DebugToolbar = ">=0.11.0"
environs = ">=7.4.0"
flask-mail = ">=0.9.1"
PyJWT = ">=1.7.1"
aerofiles = ">=1.0.0"
folium = ">=0.10.0"
geographiclib = ">=1.50"
geojson = ">=2.5.0"
geopy = ">=1.20.0"
jsonpickle = ">=1.2"
numpy = ">=1.17.2"
openpyxl = ">=3.0.0"
pathlib2 = ">=2.3.4"
PyMySQL = ">=0.9.3"
pyproj = ">=2.4.2"
PyYAML = ">=5.1.1"
requests = ">=2.22.0"
simplejson = ">=3.16.0"
lxml = ">=4.4.2"
shapely = ">=1.6.4"
"ruamel.yaml" = ">=0.16.10"
email_validator = ">=1.0.5"
redis = ">=3.4.1"
rq = ">=0.13"
flask-sse = ">=0.2.1"
haversine = "~=2.3.0"

[tool.poetry.dev-dependencies]
sqlacodegen = "^2.3.0"
pytest = ">=5.4.1"
WebTest = ">=2.0.34"
factory-boy = ">=2.12.0"
pdbpp = ">=0.10.2"
black = ">=19.10b0"
flake8 = ">=3.7.9"
flake8-blind-except = ">=0.1.1"
flake8-debugger = ">=3.2.1"
flake8-docstrings = ">=1.5.0"
flake8-isort = ">=3.0.0"
isort = ">=4.3.21"
pep8-naming = ">=0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
